src/sass/index.scss
@use './resets';
@use './variables' as v;

body {
  font-family: 'Raleway', 'Nunito', Verdana, Geneva, Tahoma, sans-serif;
  position: relative;
}
.section--1 {
  padding: v.$spacer;
  background-color: #1e213a;
  background-image: url(../assets/Cloud-background.png);
  background-repeat: no-repeat;
  background-size: 150%;
  background-position: center 12%;
  background-blend-mode: soft-light;

  & > img {
    margin: v.$spacer * 1.5 auto 0;
    width: min(50%, 150px);
  }
}
.section--2 {
  background-color: #100e1d;
  padding: 1em;
}
#root {
  main {
    @media (min-width: 720px) {
      display: grid;
      grid-template-columns: minmax(max-content, 400px) 1fr;
      grid-template-areas: 'one two';

      .navigation,
      .section--1 {
        grid-area: one;
      }
      .section--2 {
        grid-area: two;
        & > * {
          max-width: 800px;
          width: max-content;
          margin-inline: auto;
        }
      }
    }
  }
}
#modal-root {
  .modal {
    position: absolute;
    inset: 0;
  }
}
@media (min-width: 720px) {
  .section--1 {
    display: flex !important;
    flex-direction: column;

    .date {
      margin-top: auto;
    }
    .condition,
    .temperature {
      margin-top: auto;
    }
  }
}

